fix scrollbars in Chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,28 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
  
 @layer base {
   * {
